tests/ui/associated-types/issue-20005.stderr
error[E0277]: the size for values of type `Self` cannot be known at compilation time
  --> $DIR/issue-20005.rs:10:49
   |
LL |     ) -> <Dst as From<Self>>::Result where Dst: From<Self> {
   |                                                 ^^^^^^^^^^ doesn't have a size known at compile-time
   |
note: required by a bound in `From`
  --> $DIR/issue-20005.rs:1:12
   |
LL | trait From<Src> {
   |            ^^^ required by this bound in `From`
help: consider further restricting `Self`
   |
LL |     ) -> <Dst as From<Self>>::Result where Dst: From<Self>, Self: Sized {
   |                                                           +++++++++++++
help: consider relaxing the implicit `Sized` restriction
   |
LL | trait From<Src: ?Sized> {
   |               ++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
